Rewrite public resources caching system

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
     <div>
       <button class="js-test-ws">Test WS</button>
     </div>
-    <script src="/public/script.js"></script>
+    <script src="/public/js/script.js"></script>
   </body>
 </html>
