Communication between websocket and main server loop, graceful shutdown server parts by ctrl-c signal, replace SocketAddr to random number for inner peer identifier

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
       <button class="js-test-api">Test API request</button>
     </div>
     <div>
-      <button class="js-test-ws">Test WS</button>
+      <button class="js-open-ws">Open WS</button>
+      <button class="js-send-ws">Send WS</button>
+      <button class="js-close-ws">Close WS</button>
     </div>
     <script src="/public/js/script.js"></script>
   </body>
