--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello</title>
+    <title>Settlers</title>
+    <link rel="stylesheet" href="/public/style.css">
   </head>
   <body>
-    <h1>Hello</h1>
-    <div>
-      <button class="js-test-api">Test API request</button>
-    </div>
-    <div>
-      <button class="js-open-ws">Open WS</button>
-      <button class="js-send-ws">Send WS</button>
-      <button class="js-close-ws">Close WS</button>
-    </div>
-    <script src="/public/js/script.js"></script>
+    <script src="/public/js/main.js"></script>
   </body>
 </html>
