Change URI rules

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Settlers</title>
-    <link rel="stylesheet" href="/public/style.css?v={version}">
+    <link rel="stylesheet" href="/public/css/style.css?v={version}">
   </head>
   <body>
     <script src="/public/js/main.js?v={version}"></script>
